k8s/database.yml
# StatefulSet for Mongodb Server
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dntx-backend-mongodb
  namespace: glenneligio
spec:
  serviceName: "dntx-backend-mongodb-service"
  selector:
    matchLabels:
      app: dntx-backend-mongodb
  template:
    metadata:
      labels:
        app: dntx-backend-mongodb
    spec:
      containers:
        - name: dntx-backend-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/dntx
              name: dntx-mongodb-data
  volumeClaimTemplates:
    - metadata:
        name: dntx-mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
